updates some colors, now working to fix drag and drop so it works on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,4 @@
 :root {
-  background-color: #141414;
   font-family: monospace;
   font-size: 1rem;
 }
